<resources>
    <string name="app_name">Kare Smart System</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="label_name">Name:</string>
    <string name="label_email">E-mail:</string>
    <string name="label_phone">Phone:</string>
    <string name="label_location">Location:</string>
    <string name="label_NULL">NULL</string>
    <string name="title_activity_contact">contactActivity</string>
    <string name="button_add">Add</string>
    <string name="button_ignore">Ignore</string>
    <string name="switch_messages">Messages</string>
    <string name="switch_images">images</string>
    <!--Message screen-->
    <string name="call_emergency_service">Call emergency service</string>
    <string name="call_person">Call person</string>
    <!--Login screen-->
    <string name="enter_an_email">Enter your email</string>
    <string name="enter_password">Enter your password</string>

    <!--Sign up screen-->
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="roles">
        <item>Patient</item>
        <item>Caregiver</item>
    </string-array>
</resources>
