<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:text="@string/label_NULL"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/emailText"
        android:layout_below="@+id/emailText"
        android:text="@string/switch_messages" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/switch1"
        android:layout_alignBottom="@+id/switch1"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        android:text="@string/switch_images" />
</RelativeLayout>
