<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/ignoreBtn"
        style="@android:style/Widget.DeviceDefault.Light.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/addBtn"
        android:layout_alignBottom="@+id/addBtn"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/button_ignore"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nameText" />

    <Button
        android:id="@+id/addBtn"
        style="@android:style/Widget.Material.Light.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/nameText"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:layout_toStartOf="@+id/ignoreBtn"
        android:text="@string/button_add"
        app:layout_constraintRight_toLeftOf="@+id/ignoreBtn"
        app:layout_constraintTop_toTopOf="@+id/nameText" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="8dp"
        android:text="@string/label_NULL"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ignoreBtn"
        android:layout_alignStart="@+id/nameText"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/label_NULL"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
        app:layout_constraintLeft_toLeftOf="@+id/nameText"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />
</android.support.constraint.ConstraintLayout>
